@@ -1,7 +1,9 @@
 import os
-from tornado import web
 import factornado
 import factornado.tasks
+
+from factornado.handlers import Swagger, Log, Heartbeat
+from tornado import web
 
 
 class HelloHandler(web.RequestHandler):
@@ -17,6 +19,10 @@ app = factornado.Application(
     config,
     [
         ("/", HelloHandler),
+        ("/swagger.json", Swagger),
+        ("/swagger", web.RedirectHandler, {'url': '/swagger.json'}),
+        ("/heartbeat", Heartbeat),
+        ("/log", Log),
         ("/action/([^/]*?)/([^/]*?)/([^/]*?)", factornado.tasks.Action),
         ("/force/([^/]*?)/([^/]*?)/([^/]*?)", factornado.tasks.Force),
         ("/assignOne/([^/]*?)", factornado.tasks.AssignOne),
